@@ -1,3 +1,8 @@
+2017-05-31  Bin Cheng  <bin.cheng@arm.com>
+
+	* tree-data-ref.c (prune_runtime_alias_test_list): Relax minimal
+	segment length for dr_b and compute it in wide_int.
+
 2017-05-31  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/80906
